CSS overlapping bugs. svn merge -c 20521 svn://chef/work svn merge -c 20516 svn://chef/work svn merge -c 20495 svn://chef/work
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/release-6.0/work/pkgs@20523 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/untangle-apache2-config/files/var/www/skins/cammo/css/ext-skin.css
+++ b/untangle-apache2-config/files/var/www/skins/cammo/css/ext-skin.css
@@ -5,7 +5,13 @@
  * @license LGPL
  * @author Kemal Tunador <tunador@madrabaz.com>
  */
-
+.ext-el-mask {
+    background-color: #000;
+   z-index:9000;
+}
+.ext-el-mask-msg{
+   z-index:9001;
+}
 .x-panel {
     border-style: solid;
     border-color: #777777;
@@ -426,7 +432,9 @@ ul.x-tab-strip-bottom{
 }
 
 /* Window */
-
+.x-window{
+	z-index:21000
+}
 .x-window-proxy {
     background:#e0e0e0;
     border-color:#b0b0b0;
