--- a/untangle-apache2-config/files/var/www/skins/default/css/ext-skin.css
+++ b/untangle-apache2-config/files/var/www/skins/default/css/ext-skin.css
@@ -7,7 +7,11 @@
  */
 
 .ext-el-mask {
-    background-color: #000;
+  background-color: #000;
+  z-index:9000;
+}
+.ext-el-mask-msg{
+   z-index:9001;
 }
 .x-panel {
     border-style: solid;
@@ -292,7 +296,9 @@ ul.x-tab-strip-bottom{
 }
 
 /* Window */
-
+.x-window{
+	z-index:21000
+}
 .x-window-proxy {
     background:#e0e0e0;
     border-color:#b0b0b0;
